<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/glass">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/dialog"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barcadebobarbold"
                android:padding="5dp"
                android:text="@string/game_over"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barcadenobar"
                android:paddingTop="20dp"
                android:text="@string/height_score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/scoreTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barcadenobar"
                android:paddingTop="10dp"
                android:text="@string/default_score"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveHeightScoreBtn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/save"
                android:fontFamily="@font/barcadenobar"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/replayGameBtn"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/replay"
                android:fontFamily="@font/barcadenobar"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>